--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>STXNEXT recruitment task</title>
+    <title>Lilly JS recruitment task</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
